# agent-rust

./: .dockerignore  .gitignore  CITATION.cff  CITATION.cff''  Cargo.toml  Cargo.toml''  README.md  databases.json  databases.toml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  release  release.sh
.github/: CONTRIBUTING.md
.github/workflows/: docker.yml  github.yml  release-candidate.yml  release.yml
docker/: Dockerfile
scripts/: seed-1gb.sql
src/: main.rs  settings.rs
src/core/: agent.rs  context.rs  mod.rs
src/domain/: factory.rs  mod.rs  mysql.rs  postgres.rs
src/domain/mogodb/: backup.rs  connection.rs  database.rs  ping.rs  restore.rs
src/domain/mongodb/: backup.rs  connection.rs  database.rs  mod.rs  ping.rs  restore.rs
src/domain/mysql/: backup.rs  database.rs  mod.rs  ping.rs  restore.rs
src/domain/postgres/: backup.rs  connection.rs  database.rs  format.rs  mod.rs  ping.rs  restore.rs
src/services/: backup.rs  config.rs  cron.rs  mod.rs  restore.rs  status.rs
src/tasks/: ping.rs
src/utils/: common.rs  edge_key.rs  file.rs  locks.rs  logging.rs  mod.rs  redis_client.rs  text.rs
src/utils/task_manager/: cron.rs  mod.rs  models.rs  scheduler.rs  tasks.rs
